- Updated `crawlee` package to version 3.13.7 and `playwright` to version 1.52.0 in package.json. - Refactored chat handler to remove URL parameter and utilize `p-map` for concurrent processing of table names. - Enhanced crawlee handler to improve crawling logic and batch processing of data. - Changed server port from 5570 to 5571 and updated response messages in main.ts. - Improved frontend chat application with new UI elements, quick prompts, and better error handling. - Added Badge component for displaying crawl success messages.

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,11 @@
         "@langchain/openai": "^0.5.11",
         "ai": "^4.3.16",
         "async-lock": "^1.4.1",
-        "crawlee": "^3.0.0",
+        "crawlee": "^3.13.7",
         "dotenv": "^16.5.0",
         "fastify": "^5.3.3",
-        "playwright": "*",
+        "p-map": "^7.0.3",
+        "playwright": "^1.52.0",
         "zod": "^3.25.48"
     },
     "devDependencies": {
